tests/rosetta/out/Java/canny-edge-detector.error
javac error: exit status 1
/tmp/TestMochiToJavacanny-edge-detector3742676346/001/CannyEdgeDetector.java:36: error: incompatible types: possible lossy conversion from double to int
                        sum = sum + ((Number)((Number)((List)img.get(yy)).get(xx)).doubleValue() * ((Number)((List)k.get(j)).get(i)).doubleValue()).doubleValue();
                                                                     ^
/tmp/TestMochiToJavacanny-edge-detector3742676346/001/CannyEdgeDetector.java:36: error: incompatible types: possible lossy conversion from double to int
                        sum = sum + ((Number)((Number)((List)img.get(yy)).get(xx)).doubleValue() * ((Number)((List)k.get(j)).get(i)).doubleValue()).doubleValue();
                                                                              ^
/tmp/TestMochiToJavacanny-edge-detector3742676346/001/CannyEdgeDetector.java:36: error: bad operand types for binary operator '*'
                        sum = sum + ((Number)((Number)((List)img.get(yy)).get(xx)).doubleValue() * ((Number)((List)k.get(j)).get(i)).doubleValue()).doubleValue();
                                                                                                 ^
  first type:  Number
  second type: double
/tmp/TestMochiToJavacanny-edge-detector3742676346/001/CannyEdgeDetector.java:62: error: bad operand types for binary operator '*'
                int g = ((Number)((Number)((List)gx.get(y)).get(x)).doubleValue() * ((Number)((List)gx.get(y)).get(x)).doubleValue()).doubleValue() + ((Number)((Number)((List)gy.get(y)).get(x)).doubleValue() * ((Number)((List)gy.get(y)).get(x)).doubleValue()).doubleValue();
                                                                                  ^
  first type:  Number
  second type: double
/tmp/TestMochiToJavacanny-edge-detector3742676346/001/CannyEdgeDetector.java:62: error: bad operand types for binary operator '*'
                int g = ((Number)((Number)((List)gx.get(y)).get(x)).doubleValue() * ((Number)((List)gx.get(y)).get(x)).doubleValue()).doubleValue() + ((Number)((Number)((List)gy.get(y)).get(x)).doubleValue() * ((Number)((List)gy.get(y)).get(x)).doubleValue()).doubleValue();
                                                                                                                                                                                                                ^
  first type:  Number
  second type: double
/tmp/TestMochiToJavacanny-edge-detector3742676346/001/CannyEdgeDetector.java:63: error: incompatible types: int cannot be converted to Double
                row.add(g);
                        ^
/tmp/TestMochiToJavacanny-edge-detector3742676346/001/CannyEdgeDetector.java:99: error: incompatible types: String cannot be converted to Number
                line = line + ((Number)String.valueOf(((List)m.get(y)).get(x))).doubleValue();
                                                     ^
/tmp/TestMochiToJavacanny-edge-detector3742676346/001/CannyEdgeDetector.java:100: error: bad operand types for binary operator '-'
                if (x < ((Number)((Number)m.get(0).size()).doubleValue() - 1).doubleValue()) {
                                                                         ^
  first type:  Number
  second type: int
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
8 errors
